...
    @EnvironmentObject var imageEngine: ImageEngine
    
    @EnvironmentObject var veterinarianGig: VeterinarianGig
    @EnvironmentObject var router: Router
    
    @State var noResults: Bool = false
    @State var images: [CatAPIImage] = []
    @State var limit: Int = 1
    
    @State var optionsGiven: Bool = false
    @State var categoriesShown: Bool = false
    @State var originalFilename: String = String()
    @State var subId: String = String()
...
    // /////////////////////////////////////////////////////////////////// BODY
    
    var body: some View {
        ScrollView {
            
            VStack(spacing: -10) {
                Text("Search".lowercased())
                Text("Options".lowercased())
            }
            .font(.title)
            .padding()
            
            // [%][%][%][%][%][%][%][%][%][%][%][%][%][%][%][%][%][%][%][%][%][
...
                    
                    // <|><|><|><|><|><
                    // MESSAGE ><|><|><
                    // <|><|><|><|><|><
                    
                    VStack(spacing: 0) {
                        Text("optionally, search")
                        Text("for specific breeds")
                    }
                    .foregroundColor(Color.secondary)
                    .font(.subheadline)
                    .padding(.bottom)
                    
...
                    } label: {
                        switch categoriesShown {
                        case true:
                            Image(systemName: "tag")
                                .foregroundColor(Color.green)
                        case false:
                            Image(systemName: "tag.slash")
                                .foregroundColor(Color.red)
                        }
                    }
                    .buttonStyle(.bordered)
                    .padding(.bottom)
                    
...
                // TEXTFIELD |><|><
                // <|><|><|><|><|><
                
                if originalFilenameTextFieldShown {
                    HStack {
                        Spacer()
                        TextField("id", text: $originalFilename)
                            .textFieldStyle(.roundedBorder)
                            .focused($originalFilenameFocused)
                            .padding(.horizontal)
                        Spacer()
                    }
                }
...
